src/objects/Family_Contact__c.object
<CustomObject>
    <description>US2798609: This object will give  ability to view a member&apos;s contacts in SENS

So that agent can better assist the member with inquiries</description>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communications__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Communications Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>US2798673: This field is to enter Email for FamilyLink Contacts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US3306173: This field is to making lookup relationship with Family Account so that can show Family Contacts on Family Account Page.</description>
        <label>Family Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Family Contacts</relationshipLabel>
        <relationshipName>Family_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>US2798673: This field is to making lookup relationship with custom object Family Overview so that can show FamilyLink Contacts on Family Overview Page.</description>
        <label>Family</label>
        <referenceTo>Family_Overview__c</referenceTo>
        <relationshipLabel>Family Contacts</relationshipLabel>
        <relationshipName>Family_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>US2798609: Phone Field for FamilyLink Contact</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Method__c</fullName>
        <label>Preferred Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Care Advisor Connect</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Family Link</fullName>
                    <isActive>false</isActive>
                    <label>Family Link</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_caregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary caregiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>US2798673: This field is to enter Relationship for FamilyLink Contacts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>US2798673: This field is to keep the status of familyLink Contacts.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Family Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Contacts</pluralLabel>
    <recordTypes>
        <fullName>Family_Caregiver</fullName>
        <active>true</active>
        <description>This Family Contact record will have Family Account as lookup</description>
        <label>Family Caregiver</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PhoneNumberValidation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Phone__c) &amp;&amp; !ISNULL(Phone__c) &amp;&amp; NOT ( REGEX(Phone__c , &quot;[&lt;|&gt;]?[0-9,]+&quot;) )</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number.</errorMessage>
    </validationRules>
</CustomObject>